--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
             let url = `https://itcdland.csumb.edu/~milara/ajax/cityInfoByZip?zip=${zipCode}`;
             let response = await fetch(url);
             let data = await response.json();
-            //console.log(data);
             $("#city").html(data.city);
             $("#latitude").html(data.latitude);
             $("#longitude").html(data.longitude);
+        });
+        
+        $("#state").on("change", async function(){
+            let state = $("#state").val();
+            let url = `https://itcdland.csumb.edu/~milara/ajax/countyList.php?state=${state}`;
+            let response = await fetch(url);
+            let data = await response.json();
+            
+            $("#county").html("<option> Select One </option>");
+            for (let i=0; i < data.length; i++) {
+                $("#county").append(`<option> ${data[i].county} </option>`);
+            }
         });
     </script>
 </body>
